--- a/HTML/index.html
+++ b/HTML/index.html
@@ -62,15 +62,7 @@
             mx-3 -> Give margin 3 at x
          -->
         <div class="row container-fluid" id="displayNotes">
-            <!--  -->
-            <div class="card my-3 mx-3 noteCard" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Note title</h5>
-                    <p class="card-text">Some Sample note Some Sample note Some Sample note </p>
-                    <a href="#" class="btn btn-primary">Delete note</a>
-                </div>
-            </div>
-
+            <!-- This Div Contents are shown From JS - Notes Div -->
         </div>
     </div>
 
