--- a/HTML/index.html
+++ b/HTML/index.html
@@ -44,7 +44,13 @@
     <div class="container">
         <h1>Welcome to Quick Notes</h1>
         <div class="card">
-            <div class="card-body">
+            <div class="card-body" style="padding-bottom: 0;">
+                <h5 class="card-title">Add a Title</h5>
+                <div class="mb-3">
+                    <input type="text" class="form-control" id="txtTitle" placeholder="Enter Title">
+                </div>
+            </div>
+            <div class="card-body" style="padding-top: 0;">
                 <h5 class="card-title">Add a note</h5>
                 <div class="mb-3">
                     <textarea class="form-control" id="txtNote" rows="3"></textarea>
