Worked on Add Title and updated Delete Code

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -45,6 +45,10 @@
         <h1>Welcome to Quick Notes</h1>
         <div class="card">
             <div class="card-body">
+                <div class="mb-3">
+                    <h5 class="card-title">Add title</h5>
+                    <input type="email" class="form-control" id="txtNoteTitle" placeholder="Enter Title">
+                  </div>
                 <h5 class="card-title">Add a note</h5>
                 <div class="mb-3">
                     <textarea class="form-control" id="txtNote" rows="3"></textarea>
