--- a/HTML/index.html
+++ b/HTML/index.html
@@ -81,7 +81,7 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
     <!-- Links App.js -->
-    <script src="/JS/app.js"></script>
+    <script src="../JS/app.js"></script>
 </body>
 
 </html>
